authentication completed
